Redirect from main page to other by clicking in nav bar. Fixed small bugs

--- a/about_us.html
+++ b/about_us.html
@@ -96,11 +96,11 @@
                                 <p class="text">Partners</p>
                             </div>
                             <div class="achievements__block">
-                                <p class="number"> 200 </p>
+                                <p class="number"> 260 </p>
                                 <p class="text">Projects</p>
                             </div>
                             <div class="achievements__block">
-                                <p class="number"> 12 </p>
+                                <p class="number"> 14 </p>
                                 <p class="text">Years</p>
                             </div>
                             <div class="achievements__block">
@@ -116,25 +116,26 @@
                         <div class="info__paragraphs">
                             <div class="par-group">
                                 <p class="par"> <span> "Anna Kyrii Architectural and Design Group" company </span> was founded in 2008.</p>
-                                <p class="par">We work as a General Designer and develop for our clients all sections of project documentation without any exception.</p>
+                                <p class="par">We work as a General Designer and create for our clients all types of project documentation. In our architectural decisions, we are guided by the principles of contemporary architecture. We always find and offer the best solution that improves our clients’ business and solve their business tasks. Our global goal is to make projects that build Ukraine.</p>
                             </div> 
                             <div class="par-group">
-                                <p class="par"><span>The company specializes </span> in development of the following types of design works:</p>
-                                <p class="par">- Consulting on any issues related to the design process of the development of architectural objects</p>
-                                <p class="par">- Town-planning calculations with the definition of boundary building parameters and possible risks</p>
-                                <p class="par">- Project documentation: Pre-project, Schematic Design, Project, Work Project and Working Documentation</p>
-                                <p class="par">- Construction design supervision</p>
+                                <p class="par"><span>The company specializes </span> in development of the following types of work:</p>
+                                <p class="par">- Consulting on any issues related to the process of design and development of architectural objects;</p>
+                                <p class="par">- Development of concepts with the analysis of limit parameters of building and risk-map;</p>
+                                <p class="par">- Finding the best architectural and engineering solutions for the task;</p>
+                                <p class="par">- Project documentation: Pre-project, Schematic Design, Project, Work Project and Working Documentation;</p>
+                                <p class="par">- Author's supervision of construction.</p>
                             </div>
                             <div class="par-group">
-                                <p class="par">The number of projects  developed by our company includes above <span> 250 projects in the following categories: </span> public buildings and constructions, residential multi-apartment buildings, office buildings and business centers, multifunctional complexes, medical institutions, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces.</p>
+                                <p class="par"> <span>The list of projects developed by our company includes above 260 projects</span> in such categories: public buildings, housing, office buildings and business centers, multifunctional complexes, healthcare, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces.</p>
                             </div>
                             <div class="par-group">
                                 <p class="par"><span>What we don’t do</span></p>
-                                <p class="par">The interior projects of private houses and apartments interiors it is better to contact another company, we will be happy to give recommendations. Our specialists are focused on solving business problems.</p>
+                                <p class="par">for the interior design projects of private houses and apartments it is better to contact another company, we will be happy to give recommendations. Our specialists are focused on solving business tasks.</p>
                             </div>                            
                             <div class="par-group">
                                 <p class="par"><span>Team:</span></p>
-                                <p class="par">All employees who work in the company are talented individuals and high-level specialists in their field. They are architects, structural engineers, designers, and managers. Architects and structural engineers have the appropriate qualification certificates.</p>
+                                <p class="par">All the people working in the company are talented individuals and high-level specialists in their field. They are architects with qualifications certificates, designers and management. The company works closely with specialists and organizations of engineering specialties, involving them in the development of project documentation as subcontractors. We are proud of a team that is able to create and implement large-scale and important projects for Ukraine. </p>
                             </div>
                         </div>
                     </div>
