--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a data-goto=".page__projects" href="#" class="menu__link __hover"> Projects </a> </li>
-                                <li> <a data-goto=".page__about-us" href="#" class="menu__link __hover"> About us </a> </li>
-                                <li> <a data-goto=".page__contacts" href="#" class="menu__link __hover"> Contacts </a> </li>
+                                <li> <a data-goto=".page__projects" href="projects.html" class="menu__link __hover"> Projects </a> </li>
+                                <li> <a data-goto=".page__about-us" href="about_us.html" class="menu__link __hover"> About us </a> </li>
+                                <li> <a data-goto=".page__contacts" href="contacts.html" class="menu__link __hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li>    
                                     <div class="menu__icons">
