Fixed small client comments

--- a/HTML-snippets/team.html
+++ b/HTML-snippets/team.html
@@ -2,17 +2,17 @@
     <div class="emp-block">
         <img src="assets/pic/00_general/team/AK1.jpg" alt="" class="emp-block__photo">
         <p class="emp-block__name"> Anna Kyrii </p>
-        <p class="emp-block__position"> CEO </p>
+        <p class="emp-block__position"> Owner </p>
     </div>
     <div class="emp-block">
         <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
         <p class="emp-block__name"> Maryna Savchuk </p>
-        <p class="emp-block__position"> Deputy Director </p>
+        <p class="emp-block__position"> CEO </p>
     </div>
     <div class="emp-block">
         <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
         <p class="emp-block__name"> Alina Grigoryan </p>
-        <p class="emp-block__position"> Main Architect </p>
+        <p class="emp-block__position"> Chief Architect </p>
     </div>
     <div class="emp-block">
         <img src="assets/pic/00_general/team/MF1.jpg" alt="" class="emp-block__photo">
@@ -33,6 +33,11 @@
         <img src="assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
         <p class="emp-block__name"> Viacheslav Sukhinov </p>
         <p class="emp-block__position"> Architect </p>
+    </div>
+    <div class="emp-block">
+        <img src="assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
+        <p class="emp-block__name"> Shatalina Lidia </p>
+        <p class="emp-block__position"> Account Manager </p>
     </div>
     <!-- <div class="emp-block emp-block-hiden481">
         <img src="assets/images/projects/00_general/team.jpg" alt="" class="emp-block__photo">
