--- a/contacts.html
+++ b/contacts.html
@@ -90,20 +90,24 @@
                         <div class="contacts__container">
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Consulting on issues </p>
-                                    <p class="additional-text"> related to the design process of the <br> development of architectural objects </p>
+                                    <p class="main-text"> Consulting on any issues </p>
+                                    <p class="additional-text"> related to the process of design and development of architectural objects </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Town-planning calculations  </p>
-                                    <p class="additional-text"> with the definition of boundary building <br> parameters and possible risks </p>
+                                    <p class="main-text"> Development of concepts </p>
+                                    <p class="additional-text"> with the analysis of limit parameters of building and risk-map </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Pre-project, Schematic Design, Project, <br> Work Project and Working Documentation </p>
+                                    <p class="additional-text"> Finding the best architectural and engineering solutions for the task</p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Construction design supervision </p>
-                                    <p class="additional-text"> public buildings and constructions, residential multi-apartment buildings, office buildings and business centers, multifunctional complexes, medical institutions, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces. </p>
+                                    <p class="main-text"> Project documentation </p>
+                                    <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation </p>
+                                </div>
+                                <div class="contacts__what-we-do-text">
+                                    <p class="main-text"> Author's supervision of construction </p>
+                                    <!-- <p class="additional-text"> public buildings and constructions, residential multi-apartment buildings, office buildings and business centers, multifunctional complexes, medical institutions, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces. </p> -->
                                 </div>
                             </div>
                             
