--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style/preloader.css">   <!-- preloader -->
     <link rel="stylesheet" href="assets/style/normalize.css">  <!-- add reset style --> 
+    <link rel="stylesheet" href="assets/style/style_about-us.css">   <!-- about us css -->
     <link rel="stylesheet" href="assets/style/style.css">   <!-- new css -->
     <link rel="stylesheet" href="assets/style/media.css">   <!-- media queries -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
@@ -179,6 +180,33 @@
                 <div class="page__about-us scroll-section" id="page__about-us">
                     <div class="section-wrapper about-us">
 
+                        <div class="page__achievements">
+                            <div class="section-wrapper achievements" >
+                                <div class="achievements__wrapper">
+                                    <div class="achievements__block">
+                                        <p class="number"> 96 </p>
+                                        <p class="text">Clients</p>
+                                    </div>
+                                    <div class="achievements__block">
+                                        <p class="number"> 28 </p>
+                                        <p class="text">Partners</p>
+                                    </div>
+                                    <div class="achievements__block">
+                                        <p class="number"> 260 </p>
+                                        <p class="text">Projects</p>
+                                    </div>
+                                    <div class="achievements__block">
+                                        <p class="number"> 14 </p>
+                                        <p class="text">Years</p>
+                                    </div>
+                                    <div class="achievements__block">
+                                        <p class="number"> 7 </p>
+                                        <p class="text">Awards</p>
+                                    </div>
+                                </div>                        
+                            </div>
+                        </div>
+
                         <!-- <div class="section__title">
                             <h2 class="title">Team</h2>
                             <div class="icon">
@@ -207,20 +235,24 @@
                         <div class="contacts__container">
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Consulting on issues </p>
-                                    <p class="additional-text"> related to the design process of the <br> development of architectural objects </p>
+                                    <p class="main-text"> Consulting on any issues </p>
+                                    <p class="additional-text"> related to the process of design and development of architectural objects </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Town-planning calculations  </p>
-                                    <p class="additional-text"> with the definition of boundary building <br> parameters and possible risks </p>
+                                    <p class="main-text"> Development of concepts </p>
+                                    <p class="additional-text"> with the analysis of limit parameters of building and risk-map </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Pre-project, Schematic Design, Project, <br> Work Project and Working Documentation </p>
+                                    <p class="additional-text"> Finding the best architectural and engineering solutions for the task</p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Construction design supervision </p>
-                                    <p class="additional-text"> public buildings and constructions, residential multi-apartment buildings, office buildings and business centers, multifunctional complexes, medical institutions, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces. </p>
+                                    <p class="main-text"> Project documentation </p>
+                                    <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation </p>
+                                </div>
+                                <div class="contacts__what-we-do-text">
+                                    <p class="main-text"> Author's supervision of construction </p>
+                                    <!-- <p class="additional-text"> public buildings and constructions, residential multi-apartment buildings, office buildings and business centers, multifunctional complexes, medical institutions, schools, kindergartens, leisure centers, cottage towns, interiors of public spaces. </p> -->
                                 </div>
                             </div>
                             
