Add correct front photoes. fixed project filter

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Maternityhouse "Leleka"  </p></a>
+                                    <a href=""><p class="project__text"> Maternity Hospital "Leleka"  </p></a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
@@ -147,7 +147,7 @@
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Secondary school </p></a>
+                                    <a href=""><p class="project__text"> Primary school in Brovary </p></a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
@@ -157,7 +157,7 @@
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Center of Administrative Services </p></a>
+                                    <a href=""><p class="project__text"> Center of Government Services </p></a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
