--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
                                 <div class="project__img">
-                                    <a href="each-projects-page/nszu.html"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
-                                    <a href="each-projects-page/nszu.html"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/nszu/nszu.html"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/nszu/nszu.html"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
