Changed some projects photo

--- a/projects.html
+++ b/projects.html
@@ -531,22 +531,22 @@
                             </div>
                             <div class="project__diktum project__content interrior">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/37_domino/front-domino.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/37_domino/front-domino-bw.jpg" class="project__photo"></a>
+                                    <a href=""><img src="assets/pic/38_dictum/front-dictum.jpg" class="project__photo-hover"></a>
+                                    <a href=""><img src="assets/pic/38_dictum/front-dictum-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Dictum </p></a>
+                                    <a href=""><p class="project__text"> Office "Dictum" </p></a>
                                 </div>
                             </div>
                             <div class="project__up-station project__content interrior">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/37_domino/front-domino.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/37_domino/front-domino-bw.jpg" class="project__photo"></a>
+                                    <a href=""><img src="assets/pic/39_up-station/front-up-station.jpg" class="project__photo-hover"></a>
+                                    <a href=""><img src="assets/pic/39_up-station/front-up-station-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Up Station </p></a>
+                                    <a href=""><p class="project__text"> Restaurant "Up Station" </p></a>
                                 </div>
                             </div>
                             
