--- a/each-projects-page/nszu/nszu.html
+++ b/each-projects-page/nszu/nszu.html
@@ -252,7 +252,7 @@
                             
                             <div class="swiper-pagination"></div>
 
-                            <div class="icon-resize">
+                            <!-- <div class="icon-resize">
                                 <?xml version="1.0" encoding="iso-8859-1"?>
                                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                 viewBox="0 0 202.205 202.205" style="enable-background:new 0 0 202.205 202.205;" xml:space="preserve">
@@ -263,7 +263,7 @@
                                             74.268,196.314 10.067,196.304 91.862,114.505 		"/>
                                     </g>
                                 </svg>
-                            </div>                            
+                            </div>            Uncoment SCSS !!!!      -->
                         </div>                     
                     </div>
                 </div> 
