--- a/index.html
+++ b/index.html
@@ -90,8 +90,15 @@
 
         <section class="page__content" id="page__content">
             <div class="page__container">
-                <div class="page__slider" id="page__slider">
-
+                <div class="page__title">                    
+                    <div class="title-container">
+                        <div class="title-gif">
+                            <img src="assets/pic/00_general/background.gif" alt="">
+                        </div>
+                        <div class="title-text">
+                            <img src="assets/pic/00_general/bg-main.png" alt="">
+                        </div>
+                    </div>
                 </div>
 
                 <div class="page__projects scroll-section" id="page__projects">
