Change folder configurations in projects

--- a/each-projects-page/01_nszu/nszu.html
+++ b/each-projects-page/01_nszu/nszu.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../assets/style/style_projects.css">   <!-- projects css -->
     <link rel="stylesheet" href="../../assets/style/style_about-us.css">  <!--  about-us css -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/> <!--  slider swiper -->
-    <link rel="stylesheet" href="../nszu/nszu-style.css">  <!-- new css nszu-->
+    <link rel="stylesheet" href="../00_style/project-slider-style.css">  <!-- new css nszu-->
     <link rel="stylesheet" href="../../assets/style/media.css"> <!--  media queries -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
